creusot/tests/should_fail/prusti/at_expiry/no_param.stderr
error[creusot]: at must be given an explicit region
 --> no_param.rs:4:20
  |
4 | #[after_expiry('a, at(true))]
  |                    ^^

error: aborting due to previous error

